--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   rxdart: ^0.27.2
   flutter_bloc: ^7.3.3
   provider: ^6.0.1
+  get_it: ^7.2.0
   permission_handler: ^8.2.6
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
@@ -48,6 +49,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.19.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
