--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,11 @@ dependencies:
   permission_handler: ^8.2.6
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.19.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
