--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
   path: ^1.8.0
+  path_provider: ^2.0.7
 
 dev_dependencies:
   flutter_test:
